--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="price-offer.html">العروض والباقات</a>
+                            <a class="nav-link" href="offers.html">العروض والباقات</a>
                         </li>
 
                         <li class="nav-item">
