--- a/free-consultation.html
+++ b/free-consultation.html
@@ -57,7 +57,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="price-offer.html">العروض والباقات</a>
+                            <a class="nav-link" href="offers.html">العروض والباقات</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html" data-scroll="blog">المدونة</a>
